--- a/pages/page1/page1.css
+++ b/pages/page1/page1.css
@@ -5,7 +5,7 @@
 }
 
 #page1-top {
-    flex: .6;
+    flex: .2;
     margin: 10px;
 }
 
@@ -32,19 +32,78 @@
     color: black;
 }
 
+#page1-input:focus-visible {
+    outline: none;
+}
+
 .page.active #page1-top-wrap {
     opacity: 1;
     transition-delay: 0.6s;
 }
 
+#page1-middle {
+    flex: .25;
+    margin: 10px;
+}
+
+#page1-middle-wrap {
+    background-color: #540d0d;
+    border: solid 1px black;
+    border-radius: 10px;
+    height: 100%;
+    text-align: center;
+    align-content: center;
+    font-size: 9vh;
+    cursor: pointer;
+}
 
 #page1-bottom {
-    flex: .4;
+    flex: .55;
     margin: 10px;
 }
 
 #page1-bottom-wrap {
+    background-color: #540d0d;
     border: solid 1px black;
     border-radius: 10px;
     height: 100%;
+    cursor: pointer;
+}
+
+#carousel {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    gap: 20px;
+    padding: 40px;
+    scrollbar-width: none;
+    scroll-behavior: smooth;
+}
+
+#carousel::-webkit-scrollbar {
+    display: none;
+}
+
+.card {
+    flex: 0 0 200px;
+    height: 300px;
+    background: #540d0d;
+    border-radius: 12px;
+    scroll-snap-align: center;
+    transition: transform .3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    color: white;
+    transform: scale(1);
+    border: solid 1px black;
+}
+
+.card.center {
+    transform: scale(1.25);
+}
+
+.card.center:hover {
+    transform: scale(1.35);
 }
