--- a/pages/page1/page1.css
+++ b/pages/page1/page1.css
@@ -55,6 +55,8 @@
     align-content: center;
     font-size: 9vh;
     cursor: pointer;
+    color: black;
+    user-select: none;
 }
 
 #page1-bottom {
