--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ html {
     background-color: black;
     transition: background-color 1s ease;
     transition-delay: 0.6s;
+    padding: 0;
 }
 
 html.red-bg {
