--- a/pages/page2/page2.css
+++ b/pages/page2/page2.css
@@ -1,3 +1,10 @@
-.page2-modal-footer {
+.volume-owned {
     background-color: greenyellow;
+}
+.volume-not-owned {
+    background-color: lightcoral;
+}
+.page2-modal-footer {
+    cursor: pointer;
+    user-select: none;
 }
