--- a/index.css
+++ b/index.css
@@ -27,13 +27,13 @@ html.red-bg {
     text-align: center;
     align-content: center;
     font-size: 15vh;
-
     background: radial-gradient(ellipse 60% 40% at center,
             rgba(255, 0, 0, 1) 0%,
             rgba(255, 0, 0, 0.4) 50%,
             rgba(255, 0, 0, 0) 100%);
     transition: opacity 0.6s ease;
     cursor: pointer;
+    user-select: none;
 }
 
 #page0.fade-out {
