--- a/pages/page2/page2.css
+++ b/pages/page2/page2.css
@@ -1,10 +1,29 @@
 .volume-owned {
     background-color: greenyellow;
 }
+
 .volume-not-owned {
     background-color: lightcoral;
 }
+
 .page2-modal-footer {
     cursor: pointer;
     user-select: none;
+}
+
+#page2-topbar {
+    position: relative;
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
+    background-color: rgb(124, 47, 47);
+    border: 1px black solid
+}
+
+.topbar-entry {
+    height: 30px;
+    text-align: center;
+    align-content: center;
+    cursor: pointer;
 }
